Decrease menu size - Menu was unnecessarily and invisibly over large part of the top screen - This prevented clicked actions when scrolled up for reasons unknown to user - Add selected-difficulty class to make known difficulty selected

--- a/css/main.css
+++ b/css/main.css
@@ -294,8 +294,8 @@ h2, h3, h4{ color: #171D1C;}
   nav {
     position: fixed;
     top: 0;
-    width: 100%;
-    height: 73px;
+    width: 8%;
+    height: 20%;
   }
   
   .collapse {
@@ -691,6 +691,11 @@ input::-webkit-input-placeholder {	color: #999;}
 .filterflex-item:hover {
     background-color: #96E6b3;
     color:#171D1C;
+}
+
+.selected-difficulty {
+    background-color: #96E6b3;
+    opacity: .8;
 }
 
 /* ==========================================================================
